# Godot_GNU_STL

./: .gitignore  CMakeLists.txt  CMakeSettings.json  SConstruct  godot.vcxproj  godot.vcxproj.filters
cmake/: generate.cmake
core/: CMakeLists.txt  SCsub  array.cpp  callable.cpp  class_db.cpp  compressed_translation.cpp  compressed_translation.h  core.cmake  core_bind.cpp  core_bind.h  core_builders.py  core_constants.cpp  doc_data.h  image.cpp  method_bind.cpp  method_bind.h  node_path.cpp  object.cpp  packed_data_container.cpp  packed_data_container.h  project_settings.cpp  register_core_types.cpp  script_debugger_local.cpp  string_builder.cpp  undo_redo.cpp  ustring.cpp  variant.cpp  variant_call.cpp  variant_op.cpp  variant_parser.cpp
drivers/: CMakeLists.txt  drivers.cmake
drivers/coreaudio/: CMakeLists.txt
drivers/unix/: CMakeLists.txt  os_unix.cpp
drivers/wasapi/: CMakeLists.txt  audio_driver_wasapi.cpp
drivers/windows/: CMakeLists.txt
editor/: CMakeLists.txt  SCsub  action_map_editor.cpp  action_map_editor.h  animation_bezier_editor.cpp  animation_bezier_editor.h  animation_track_editor.cpp  animation_track_editor.h  animation_track_editor_plugins.cpp  audio_stream_preview.cpp  audio_stream_preview.h  code_editor.cpp  connections_dialog.cpp  connections_dialog.h  create_dialog.cpp  create_dialog.h  dependency_editor.cpp  dependency_editor.h  doc_tools.cpp  editor.cmake  editor_asset_installer.cpp  editor_atlas_packer.cpp  editor_atlas_packer.h  editor_autoload_settings.cpp  editor_data.cpp  editor_data.h  editor_export.cpp  editor_export.h  editor_feature_profile.cpp  editor_feature_profile.h  editor_file_dialog.cpp  editor_file_dialog.h  editor_file_system.cpp  editor_file_system.h  editor_folding.cpp  editor_folding.h  editor_fonts.cpp  editor_help.cpp  editor_help.h  editor_help_search.cpp  (+62 more)
main/: CMakeLists.txt  SCsub  input_default.cpp  main.cmake  main.cpp  performance.cpp  performance.h
modules/: CMakeLists.txt  SCsub  modules.cmake
modules/arkit/: CMakeLists.txt  config.cmake
modules/assimp/: CMakeLists.txt  editor_scene_importer_assimp.cpp  editor_scene_importer_assimp.h  import_state.h  import_utils.h
modules/basis_universal/: CMakeLists.txt  register_types.cpp
modules/bmp/: CMakeLists.txt  image_loader_bmp.cpp
modules/bullet/: CMakeLists.txt  area_bullet.cpp  collision_object_bullet.cpp  collision_object_bullet.h  rigid_body_bullet.cpp  shape_bullet.cpp  shape_bullet.h  soft_body_bullet.cpp  space_bullet.cpp  space_bullet.h
modules/camera/: CMakeLists.txt  config.cmake
modules/csg/: CMakeLists.txt  csg.cpp  csg.h  csg_gizmos.cpp  csg_shape.cpp  csg_shape.h
modules/cvtt/: CMakeLists.txt  image_compress_cvtt.cpp
modules/dds/: CMakeLists.txt  texture_loader_dds.cpp
modules/enet/: CMakeLists.txt  networked_multiplayer_enet.cpp
modules/etc/: CMakeLists.txt  config.cmake  image_etc.cpp  texture_loader_pkm.cpp
modules/gdnative/: gdnative.cpp  gdnative_builders.py  register_types.cpp
modules/gdnative/arvr/: arvr_interface_gdnative.cpp  arvr_interface_gdnative.h
modules/gdnative/gdnative/: array.cpp  pool_arrays.cpp  string.cpp  vector3.cpp
modules/gdnative/nativescript/: api_generator.cpp  nativescript.cpp  nativescript.h
modules/gdnative/pluginscript/: pluginscript_instance.cpp  pluginscript_instance.h  pluginscript_script.cpp  pluginscript_script.h
modules/gdnative/videodecoder/: video_stream_gdnative.h
modules/gdnavigation/: gd_navigation_server.cpp  gd_navigation_server.h  nav_map.cpp  nav_map.h  nav_region.cpp  navigation_mesh_generator.cpp  navigation_mesh_generator.h
modules/gdscript/: CMakeLists.txt  gdscript.cpp  gdscript.h  gdscript_compiler.cpp  gdscript_editor.cpp  gdscript_function.cpp  gdscript_function.h  gdscript_functions.cpp  gdscript_parser.cpp  gdscript_parser.h  gdscript_tokenizer.cpp
modules/gdscript/language_server/: gdscript_extend_parser.cpp  gdscript_language_protocol.cpp  gdscript_language_protocol.h  gdscript_text_document.cpp  gdscript_workspace.cpp  lsp.hpp
modules/gdscript/tests/: test_gdscript.cpp
modules/glslang/: register_types.cpp
modules/gridmap/: CMakeLists.txt  grid_map.cpp  grid_map_editor_plugin.cpp
modules/hdr/: CMakeLists.txt  image_loader_hdr.cpp
modules/jpg/: CMakeLists.txt  image_loader_jpegd.cpp
modules/jsonrpc/: CMakeLists.txt
modules/mbedtls/: CMakeLists.txt
modules/mobile_vr/: CMakeLists.txt  mobile_vr_interface.cpp
modules/opensimplex/: CMakeLists.txt
modules/pvr/: CMakeLists.txt
modules/recast/: CMakeLists.txt  config.cmake  navigation_mesh_generator.cpp
modules/regex/: CMakeLists.txt  regex.cmake  regex.cpp
modules/squish/: CMakeLists.txt
modules/stb_vorbis/: CMakeLists.txt
modules/svg/: CMakeLists.txt
modules/tga/: CMakeLists.txt
modules/theora/: CMakeLists.txt
modules/tinyexr/: CMakeLists.txt  image_loader_tinyexr.cpp  image_saver_tinyexr.cpp
modules/upnp/: CMakeLists.txt  upnp.cpp
modules/vhacd/: CMakeLists.txt  register_types.cpp
modules/visual_script/: CMakeLists.txt  visual_script.cpp  visual_script_editor.cpp  visual_script_expression.cpp  visual_script_flow_control.cpp  visual_script_nodes.cpp  visual_script_property_selector.cpp
modules/webp/: CMakeLists.txt
modules/webrtc/: CMakeLists.txt
modules/websocket/: CMakeLists.txt  wsl_client.cpp  wsl_server.cpp
modules/xatlas_unwrap/: CMakeLists.txt  config.cmake
platform/windows/: CMakeLists.txt  SCsub  definition.cmake  detect.py  os_windows.cpp  os_windows.h  platform_windows_builders.py
platform/x11/: CMakeLists.txt  definition.cmake  joypad_linux.cpp  os_x11.cpp
pygen_script/: editor_builders.py  generate_app_icon.py  generate_authors.py  generate_builtin_fonts.py  generate_certs.py  generate_certs_compressed.py  generate_default_controller_mappings.py  generate_default_font.py  generate_doc_data_class_path.py  generate_doc_data_compressed.py  generate_doc_translations.py  methods.py  (+17 more)
tests/: CMakeLists.txt  test_aabb.cpp  test_array.cpp  test_astar.cpp  test_crypto.h  test_macros.h  test_main.cpp  test_ordered_hash_map.h  test_vector.cpp  tester.cpp
(+668 files in other folders)
